src/style.css
/**
  Copyright (c) Microsoft Corporation.
  Licensed under the MIT license.
*/

:root {
  --sidebar-width: 300px;
  --search-height: 50px;
  --monospace: Consolas, Menlo, monospace;
  --non-monospace: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  --text-color: #24292e;
  --background-color: #fff;
  --link-color: #0366d6;

  --border-color: #d1d5da;
  --search-highlight-color: #ff0;
  --selection-color: #FFFDE7;
}

* {
  box-sizing: border-box;
}


body {
  background-color: #fff;
  font-family: var(--non-monospace);
  line-height: 1.5;
  color: var(--text-color);
  overflow: hidden;
}


a {
  color: var(--link-color);
  text-decoration: none;
}


external-link-icon {
  width: 13px;
  height: 13px;

  display: inline-block;

  background-position: center right;
  background-repeat: no-repeat;
  background-image: linear-gradient(transparent,transparent),url("data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2212%22 height=%2212%22%3E %3Cpath fill=%22%23fff%22 stroke=%22%2336c%22 d=%22M1.5 4.518h5.982V10.5H1.5z%22/%3E %3Cpath fill=%22%2336c%22 d=%22M5.765 1H11v5.39L9.427 7.937l-1.31-1.31L5.393 9.35l-2.69-2.688 2.81-2.808L4.2 2.544z%22/%3E %3Cpath fill=%22%23fff%22 d=%22M9.995 2.004l.022 4.885L8.2 5.07 5.32 7.95 4.09 6.723l2.882-2.88-1.85-1.852z%22/%3E %3C/svg%3E");
}


documentation-header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: var(--search-height);

  display: flex;
  align-items: center;
  padding: 0 15px;

  z-index: 100;

  font-size: 20px;
  background: #f6f8fa;
  border: 1px solid var(--border-color);
}
    documentation-header project-name {
      margin-left: 5px;
    }

    documentation-header a.home-navigation {
      flex: none;
      color: var(--text-color);
    }

documentation-sidebar {
  position: absolute;
  left: 0;
  top: var(--search-height);
  width: var(--sidebar-width);
  bottom: 0;

  display: flex;
  padding-right: 15px;
  overflow-x: hidden;
  overflow-y: scroll;
}
    documentation-sidebar sidebar-divider {
      display: flex;

      font-weight: 600;
      font-size: 85%;
    }
        documentation-sidebar sidebar-divider::before {
          content: ".";
          color: transparent;
          flex: 1;
          border-bottom: 1px solid var(--border-color);
          margin: 0 1em;
          transform: translate(0px, -50%);
        }

documentation-view {
  position: absolute;
  left: var(--sidebar-width);
  top: var(--search-height);
  bottom: 0;
  right: 0;

  overflow-x: hidden;
  overflow-y: scroll;

  padding-top: 16px;
}
    documentation-view:focus {
      outline: none;
    }

    documentation-view .documentation-name {
      display: flex;
      align-items: center;
      padding: 8px 16px;
      margin: 0;
      background-color: #f6f8fa;
      border: 1px solid var(--border-color);
      border-top-left-radius: 3px;
      border-top-right-radius: 3px;
      font-size: 14px;
      font-weight: 600;
    }
        documentation-view .documentation-name svg {
          margin-right: 4px;
        }

    documentation-view documentation-body {
      display: block;
      padding-bottom: 15px;
      border-left: 1px solid var(--border-color);
      border-bottom: 1px solid var(--border-color);
      border-right: 1px solid var(--border-color);
      border-bottom-right-radius: 2px;
      border-bottom-left-radius: 2px;
    }

    documentation-view > section {
      overflow: auto;
      max-width: 1010px;
      margin: 0 15px 32px 15px;
    }

    documentation-view markdown-content {
      display: block;
      padding: 0 32px;
    }

    documentation-view markdown-content.selected {
      animation: highlight-animation ease 2s;
    }

@keyframes highlight-animation {
  0% {
    background-color: var(--selection-color);
  }
  100% {
    background-color: transparent;
  }
}


search-view {
  flex-grow: 1;

  display: inline-flex;
  align-items: center;

  max-width: 500px;
  background-color: white;
  border-radius: 2rem;
  padding: 0 0 0 10px;
  border: 1px solid var(--border-color);
}
    search-view input[type=search] {
      -webkit-appearance: none;
      background: 0 0;
      text-align: left;
      border: 0;
      font-size: 20px;
      color: var(--text-color);
      margin: 0 1ex;
      text-overflow: ellipsis;
      flex-grow: 1;
      padding: 3px 0;
    }
        search-view input[type=search]::placeholder {
          color: #11111166;
        }

        search-view input[type=search]:focus {
          outline: 0;
        }


.version-selector {
  margin: 0 15px 0 5px;
  font-size: 15px;
}


search-suggestions {
  position: absolute;
  --icon-width: 80px;
  --top: var(--search-height);
  --left: calc(var(--search-input-x) - var(--icon-width));
  top: var(--top);
  left: var(--left);
  width: 900px;
  max-width: calc(100% - var(--left));
  max-height: min(700px, calc(100% - var(--top)));

  display: flex;
  flex-direction: column;

  background-color: var(--background-color);
  border: 1px solid var(--border-color);
  border-radius: 3px;
  overflow-x: hidden;
  overflow-y: auto;
}
    search-suggestions .search-item {
      display: flex;
      flex-direction: row;
      align-items: center;
      min-height: 50px;
      padding: 0;

      color: var(--text-color);
      border-bottom: 1px solid hsla(0, 0%, 20%, 0.12);
    }
        search-suggestions .search-item.selected,
        search-suggestions .search-item:hover {
          background-color: var(--selection-color);
        }

        search-suggestions .search-item.text-only {
          display: flex;
          align-items: center;
          justify-content: center;
        }

    search-suggestions item-icon-container {
      width: var(--icon-width);
      flex: none;
      display: flex;
      align-items: center;
      justify-content: center;
    }

    search-suggestions item-icon {
      font-size: 75%;
      width: 50px;
      display: flex;
      align-items: center;
      justify-content: center;
      font-family: var(--monospace);
      padding: 1px 4px;
      border-radius: 4px;
    }
        search-suggestions item-icon.docs {
          background-color: #e1f5fe;
        }
        search-suggestions item-icon.api {
          background-color: #fce4ec;
        }

    search-suggestions item-name-container {
      overflow: hidden;
      display: block;
    }
        search-suggestions item-name-container.name-only {
          display: flex;
          justify-content: center;
        }


    search-suggestions item-name {
      display: block;

      font-family: var(--monospace);
    }
        search-suggestions item-name .highlight {
          background-color: var(--search-highlight-color);
        }

        search-suggestions item-name .method-name {
          color: #757575;
        }


    search-suggestions item-description {
      display: block;

      font-size: 90%;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }


glass-pane {
  position: absolute;
  left: 0;
  right: 0;
  top: var(--search-height);
  bottom: 0;

  display: none;
  background-color: rgba(0, 0, 0, 0.5);
}
    body.has-search-suggestions glass-pane {
      display: block;
    }


/*
 * Mobile viewport styles
 */
@media only screen and (max-width: 800px) {
  :root {
    --sidebar-width: 0px;
  }

  documentation-header project-name {
    display: none;
  }

  documentation-sidebar {
    display: none;
  }
  search-suggestions {
    --left: 0px;
  }

  documentation-view > section {
    margin: 0 0 32px 0;
  }
}

